[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broomstick"
version = "0.1.0"
description = "Clean up Python environments, interpreters, and packages"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Broomstick Contributors"}
]
keywords = ["python", "venv", "cleanup", "environment", "package-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/yourusername/broomstick"
Repository = "https://github.com/yourusername/broomstick"

[project.scripts]
broomstick = "broomstick:main"

[tool.setuptools]
py-modules = ["broomstick"]
