[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broomstick"
version = "2.0.0"
description = "Mole-inspired cleanup tool for Python: discover, analyze, and clean up Python environments, interpreters, and packages"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Hayden", email = "hayden@example.com"}
]
keywords = ["python", "venv", "cleanup", "environment", "package-manager", "tui", "virtualenv", "pip", "conda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/haydenso/broomstick"
Repository = "https://github.com/haydenso/broomstick"
Issues = "https://github.com/haydenso/broomstick/issues"

[project.scripts]
broomstick = "broomstick:main"

[tool.setuptools]
py-modules = ["broomstick"]
